--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </tr>
     <tr style="font-weight: normal">
       <td>12</td>
-      <td>Pitt Pixel Persuaders</td>
+      <td>Pitt Pixels</td>
       <td>2</td>
       <td style="text-align: left;text-indent: 1em">0.8168 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
@@ -287,7 +287,7 @@
     </tr>
     <tr>
       <td>17</td>
-      <td>Pitt Pixel Persuaders</td>
+      <td>Pitt Pixels</td>
       <td>1</td>
       <td style="text-align: left;text-indent: 1em">0.7910</td>
     </tr>
@@ -317,13 +317,13 @@
     </tr>
     <tr>
       <td>22</td>
-      <td>Pitt Pixel Persuaders</td>
+      <td>Pitt Pixels</td>
       <td>4</td>
       <td style="text-align: left;text-indent: 1em">0.7710</td>
     </tr>
     <tr>
       <td>23</td>
-      <td>Pitt Pixel Persuaders</td>
+      <td>Pitt Pixels</td>
       <td>5</td>
       <td style="text-align: left;text-indent: 1em">0.7415</td>
     </tr>
@@ -365,7 +365,7 @@
     </tr>
     <tr>
       <td>30</td>
-      <td>Pitt Pixel Persuaders</td>
+      <td>Pitt Pixels</td>
       <td>3</td>
       <td style="text-align: left;text-indent: 1em">0.5285</td>
     </tr>
@@ -530,7 +530,7 @@
     </tr>
     <tr style="font-weight: normal">
       <td>21</td>
-      <td>Pitt Pixel Persuaders</td>
+      <td>Pitt Pixels</td>
       <td>1</td>
       <td style="text-align: left;text-indent: 1em"> 0.1217 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
