--- a/index.html
+++ b/index.html
@@ -590,10 +590,11 @@
         </p>
 
         <!--        <h3 id="system-description-paper-submission-information">Paper Submission Information</h3>-->
-        <p>By default, we only accept short papers (at most 4 pages, including references). Appendices are optional. All
-            papers will be treated equally in the workshop proceedings. Moreover, authors are expected to adhere to the
-            ethical code set out in the ACL <a href="https://www.aclweb.org/portal/content/acl-code-ethics">Code of
-            Ethics</a>. Submissions that violate any of the policies will be rejected without review. </p>
+        <p>By default, we only accept short papers (at most 4 pages<s>, including references and optional appendix</s>).
+            <strong>References do not count the 4-page limit and Appendices have no page limit)</strong>. All papers will be treated equally in the workshop proceedings. Moreover,
+            authors are expected to adhere to the ethical code set out in the ACL
+            <a href="https://www.aclweb.org/portal/content/acl-code-ethics">Code of Ethics</a>. Submissions that
+            violate any of the policies will be rejected without review. </p>
 
         <p><strong>At least one</strong> of the authors is required to be a reviewer and fill out this
             <a href="https://forms.gle/2cWKEdUdb963oiAf7">Reviewer Form</a>. We will implement a double-blind review.</p>
@@ -614,6 +615,7 @@
           </li>
           <li>Conclusion</li>
           <li>References</li>
+          <li>Appendices (Optional)</li>
         </ul>
 
         <p><strong>Paper Format</strong>: <a href="https://2023.emnlp.org/calls/style-and-formatting/">
