--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
 
         <!--        <h3 id="system-description-paper-submission-information">Paper Submission Information</h3>-->
         <p>By default, we only accept short papers (at most 4 pages<s>, including references and optional appendix</s>).
-            <strong>References do not count the 4-page limit and Appendices have no page limit)</strong>. All papers will be treated equally in the workshop proceedings. Moreover,
+            <strong>References do not count the 4-page limit and Appendices have no page limit</strong>. All papers will be treated equally in the workshop proceedings. Moreover,
             authors are expected to adhere to the ethical code set out in the ACL
             <a href="https://www.aclweb.org/portal/content/acl-code-ethics">Code of Ethics</a>. Submissions that
             violate any of the policies will be rejected without review. </p>
