--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
             <a href="https://www.aclweb.org/portal/content/acl-code-ethics">Code of Ethics</a>. Submissions that
             violate any of the policies will be rejected without review. </p>
 
-        <p><strong>At least one</strong> of the authors is required to be a reviewer and fill out this
+        <p><strong>At least one of the authors</strong> is required to be a reviewer and fill out this
             <a href="https://forms.gle/2cWKEdUdb963oiAf7">Reviewer Form</a>. We will implement a double-blind review.</p>
 
             <p>Structure of a system description paper could look as follows:</p>
