--- a/index.html
+++ b/index.html
@@ -680,26 +680,26 @@
               <div class="copy-notice" id="copyNotice1">Copied</div>
           </div>
 
-        <div class="citation-container">
-              <pre class="snippet-clipboard-content notranslate position-relative overflow-auto" id="citation2" style="border: 0; padding: 20px">
-@inproceedings{liu-etal-2023-overview,
-    title = "Overview of the 2023 {I}mage{A}rg Shared Task",
-    author = "Liu, Zhexiong  and Elaraby, Mohamed  and Zhong, Yang  and Litman, Diane",
-    booktitle = "Proceedings of the 10th Workshop on Argument Mining",
-    month = Dec,
-    year = "2023",
-    address = "Online and in Singapore",
-    publisher = "Association for Computational Linguistics"
-    }</pre>
+<!--        <div class="citation-container">-->
+<!--              <pre class="snippet-clipboard-content notranslate position-relative overflow-auto" id="citation2" style="border: 0; padding: 20px">-->
+<!--@inproceedings{liu-etal-2023-overview,-->
+<!--    title = "Overview of the 2023 {I}mage{A}rg Shared Task",-->
+<!--    author = "Liu, Zhexiong  and Elaraby, Mohamed  and Zhong, Yang  and Litman, Diane",-->
+<!--    booktitle = "Proceedings of the 10th Workshop on Argument Mining",-->
+<!--    month = Dec,-->
+<!--    year = "2023",-->
+<!--    address = "Online and in Singapore",-->
+<!--    publisher = "Association for Computational Linguistics"-->
+<!--    }</pre>-->
 
-              <!-- Copy Button with Copy Icon -->
-              <button class="copy-button" onclick="copyCitation2()">
-                  <i class="copy-icon fas fa-copy"></i>
-              </button>
+<!--              &lt;!&ndash; Copy Button with Copy Icon &ndash;&gt;-->
+<!--              <button class="copy-button" onclick="copyCitation2()">-->
+<!--                  <i class="copy-icon fas fa-copy"></i>-->
+<!--              </button>-->
 
-              <!-- Copy Notice -->
-              <div class="copy-notice" id="copyNotice2">Copied</div>
-          </div>
+<!--              &lt;!&ndash; Copy Notice &ndash;&gt;-->
+<!--              <div class="copy-notice" id="copyNotice2">Copied</div>-->
+<!--          </div>-->
 
 
         <p><strong>Paper Format</strong>: <a href="https://2023.emnlp.org/calls/style-and-formatting/">
