--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
         <p class="view"><a style="color: red">Important Announcement:</a><br>
+            <b>[08/19]</b> Paper submission portal is open! See "Call for Papers" section. <br>
             <b>[08/02]</b> Call for system description papers! See "Call for Papers" section. <br>
             <b>[08/01]</b> Shared task leaderboard is out! <br>
             <b>[07/19]</b> The submission (predicted results) deadline is extended to 07/26 (AoE). <br>
@@ -704,7 +705,11 @@
 
         <p><strong>Paper Format</strong>: <a href="https://2023.emnlp.org/calls/style-and-formatting/">
             EMNLP 2023 style sheets</a>.</p>
-        <p><strong>Paper Submission Portal:</strong> TBA.</p>
+        <p><strong>Paper Submission:</strong> Here is the <a
+                href="https://softconf.com/emnlp2023/ArgMining2023/user/scmd.cgi?scmd=submitPaperCustom&pageid=0">
+            Submission Form</a>. <span style="color: red">Please select ImageArg Shared Task from the Submission
+            Categories dropdown</span>, located in the middle of the form; otherwise,
+            the organizers may not be able to receive your paper.
 
         <!--Please use the CAMERA-READY, non-anonymized option.-->
 
