--- a/index.html
+++ b/index.html
@@ -705,10 +705,10 @@
 
         <p><strong>Paper Format</strong>: <a href="https://2023.emnlp.org/calls/style-and-formatting/">
             EMNLP 2023 style sheets</a>.</p>
-        <p><strong>Paper Submission:</strong> Here is the <a
+        <p><strong>Paper Submission:</strong> <span style="color: red">Please select ImageArg Shared Task from the Submission
+            Categories dropdown</span> located in the middle of the <a
                 href="https://softconf.com/emnlp2023/ArgMining2023/user/scmd.cgi?scmd=submitPaperCustom&pageid=0">
-            Submission Form</a>. <span style="color: red">Please select ImageArg Shared Task from the Submission
-            Categories dropdown</span>, located in the middle of the form; otherwise,
+            Submission Form</a>; otherwise,
             the organizers may not be able to receive your paper.
 
         <!--Please use the CAMERA-READY, non-anonymized option.-->
