--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
         </ul>
 
 
-        <p>Please cite the following two papers:</p>
+        <p><strong>Please cite the following two papers:</strong></p>
         <div class="citation-container">
               <pre class="snippet-clipboard-content notranslate position-relative overflow-auto" id="citation1" style="border: 0; padding: 20px">
 @inproceedings{liu-etal-2022-imagearg,
