--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
         <p class="view"><a style="color: red">Important Announcement:</a><br>
+            <b>[08/28]</b> No deadline extension - paper submission due date is still 9/1 (AoE). <br>
             <b>[08/19]</b> Paper submission portal is open! See "Call for Papers" section. <br>
             <b>[08/02]</b> Call for system description papers! See "Call for Papers" section. <br>
             <b>[08/01]</b> Shared task leaderboard is out! <br>
@@ -725,7 +726,7 @@
             <li>07/07/23: Registration closed and Test scripts released for both subtasks</li>
             <li><s>07/21/23</s>: 07/26/2023: Shared task submission due.</li>
             <li>08/01/23: Leaderboard announcement for both tasks</li>
-            <li>09/01/23: System description paper due</li>
+            <li>09/01/23: System description paper due <span style="color: red">(No Deadline Extension)</span></li>
             <li>10/02/23: Notification of paper acceptance</li>
             <li>10/09/23: Camera-ready paper due</li>
             <li>12/10/23: Workshop dates</li>
