--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
         <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
         <p class="view"><a style="color: red">Important Announcement:</a><br>
-            <b>[08/28]</b> No deadline extension - paper submission due date is still 9/1 (AoE). <br>
-            <b>[08/19]</b> Paper submission portal is open! See "Call for Papers" section. <br>
+            <b>[09/01]</b> Paper submission due date is extended to 9/2 PM (AoE). <br>
+            <b>[08/28]</b> <s>No deadline extension - paper submission due date is still 9/1 (AoE).</s> <br>
+<!--            <b>[08/19]</b> Paper submission portal is open! See "Call for Papers" section. <br>-->
             <b>[08/02]</b> Call for system description papers! See "Call for Papers" section. <br>
             <b>[08/01]</b> Shared task leaderboard is out! <br>
             <b>[07/19]</b> The submission (predicted results) deadline is extended to 07/26 (AoE). <br>
@@ -142,7 +143,7 @@
 <!--            <b>[07/12]</b> The submission portal and evaluation script will be out by 7/16 as we received a large number of registrations that need us to refine the submission procedure. Thanks for your patience! <br>-->
             <b>[07/08]</b> The test data is out <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> here</a>.<br>
 <!--            Evaluation script will be out soon.<br>-->
-            <b>[07/05]</b> Registration will be closed on 07/07 (AoE).<br>
+<!--            <b>[07/05]</b> Registration will be closed on 07/07 (AoE).<br>-->
             <b>[07/03]</b> Update data-downloading scripts. Please pull the
             <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> new code</a>.<br>
 <!--            <b>[05/20]</b> To participate, need to fill in this <a-->
@@ -726,7 +727,7 @@
             <li>07/07/23: Registration closed and Test scripts released for both subtasks</li>
             <li><s>07/21/23</s>: 07/26/2023: Shared task submission due.</li>
             <li>08/01/23: Leaderboard announcement for both tasks</li>
-            <li>09/01/23: System description paper due <span style="color: red">(No Deadline Extension)</span></li>
+            <li><s>09/01/23</s>: 09/02/23: System description paper due <span style="color: red"><s>(No Deadline Extension)</s></span></li>
             <li>10/02/23: Notification of paper acceptance</li>
             <li>10/09/23: Camera-ready paper due</li>
             <li>12/10/23: Workshop dates</li>
