--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 
         The ImageArg dataset is composed of tweets (images and text) from controversial topics,
-        namely <strong> gun control </strong> and <strong> abortion</strong>. The the dataset
+        namely <strong> gun control </strong> and <strong> abortion</strong>. The dataset
         contains 2-dimensions of annotations: Argumentative Stance (AS), Image Persuasiveness (IP), of which
         each dimension addresses a unique research question: 1) AS: does the tweet have an
         argumentative
@@ -411,13 +411,14 @@
     </tr>
     <tr style="font-weight: normal">
       <td>31</td>
-      <td>feeds</td>
+      <td>feeds*</td>
       <td>1</td>
       <td style="text-align: left;text-indent: 1em">0.4418 &nbsp;&nbsp;&nbsp;&starf;</td>
     </tr>
 
     </table>
-        Note: Attempt denotes submission attempt number; Score denotes F1-score. The best submission attempt from each team is labeled with a star (&starf;) and will be used for final ranking.
+        Note: Attempt denotes submission attempt number; Score denotes F1-score. The best submission attempt from each team is labeled with a star (&starf;) and will be used for final ranking. *Team feeds submitted predictions for only one
+topic by the submission deadline so only partial results are evaluated.
 
         <p></p>
 
@@ -592,7 +593,7 @@
             dataset to provide data patches that will replace invalid tweets with new annotated ones. Participants are
             required to fill out the <a
                     href="https://forms.gle/ZJ2HFjSekXb8xkd87">Google
-                Form (CLOSED)</a> in order to receive data patches and the shared task updates.</p>
+                Form (Closed)</a> in order to receive data patches and the shared task updates.</p>
 
         <p>Participants are allowed to extend only the training set with further (synthetic) samples. However, if do
             that, participants have to describe and the algorithm which extends the training set in the system
@@ -787,7 +788,7 @@
         </ul>
 
         <hr>
-        <h2 id="task-organizers">6. Shared Task Organizers</h2>
+        <h2 id="task-organizers">6. Organizing Committee</h2>
 
 
         <ul>
@@ -801,11 +802,27 @@
             <li><a href="http://yangzhongcs.com/">Yang Zhong</a>, Ph.D. Student of Computer Science</li>
             <li><a href="https://people.cs.pitt.edu/~litman/">Diane Litman</a>, Professor of Computer Science
             </li>
-            <li><strong>Contact</strong>: imagearg [at] gmail.com</li>
+            <li><strong>Contact</strong>: <span style="color: red">imagearg [at] gmail.com</span></li>
             <!--                </ul>-->
             <li><strong>Affiliation</strong>: University of Pittsburgh</li>
         </ul>
 
+
+        <hr>
+        <h2 id="program-committee">7. Program Committee</h2>
+
+        <ul>
+            <li>Johannes Kiesel, Bauhaus-Universität Weimar</li>
+            <li>Arun Balajiee Lekshmi Narayanan, University of Pittsburgh </li>
+            <li>Melika Nobakhtian, Iran University of Science and Technology </li>
+            <li>Rajaraman Kanagasabai, Institute for Infocomm Research, A*STAR</li>
+            <li>Mohammad Shokri, Hunter College, CUNY</li>
+            <li>Mohammad Soltani, Heinrich Heine University</li>
+            <li>Ghazal Zamaninejad, Iran University of Science and Technology</li>
+            <li>Jing Zhang, Emory University</li>
+            <li>Qing Zong, Harbin Institute of Technology, Shenzhen</li>
+
+        </ul>
 
     </section>
     <footer>
