--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
         <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
         <p class="view"><a style="color: red">Important Announcement:</a><br>
+            <b>[10/01]</b> Full corpus is now available <a href="https://github.com/ImageArg/ImageArg-Shared-Task">here</a>. <br>
             <b>[09/01]</b> Paper submission due date is extended to 9/2 PM (AoE). <br>
-            <b>[08/28]</b> <s>No deadline extension - paper submission due date is still 9/1 (AoE).</s> <br>
+<!--            <b>[08/28]</b> <s>No deadline extension - paper submission due date is still 9/1 (AoE).</s> <br>-->
 <!--            <b>[08/19]</b> Paper submission portal is open! See "Call for Papers" section. <br>-->
             <b>[08/02]</b> Call for system description papers! See "Call for Papers" section. <br>
             <b>[08/01]</b> Shared task leaderboard is out! <br>
