add test data with labels

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ topic by the submission deadline so only partial results are evaluated.
 
         <ul>
             <li>Training and dev data download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task#Dataset">Here</a></li>
-            <li>Test data (without labels) download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task#Dataset">Here</a></li>
+            <li>Test data download: <a href="https://github.com/ImageArg/ImageArg-Shared-Task#Dataset">Here</a></li>
             <li>Evaluation script (submission format validation): <a href="https://github.com/ImageArg/ImageArg-Shared-Task/blob/main/check_submission_format.py">Here</a></li>
             <li>Shared Task Submission: <a href="https://docs.google.com/forms/d/e/1FAIpQLScT-JU8FHu1Eoa1Eq1XzCfg9HBvFdoutxXL5lMTI6NnKTt6yg/viewform">Here</a>.<br></li>
         </ul>
