add test data with labels

--- a/index.html
+++ b/index.html
@@ -582,10 +582,12 @@ topic by the submission deadline so only partial results are evaluated.
         <br><br>
         <hr>
         <h2 id="scripts to download the data"> 2. Dataset and Shared Task Submission</h2>
-        <p>The dataset to download should only be used for participating in the ImageArg Shared Task. Any
-            other use is explicitly prohibited. Participants are not allowed to redistribute the dataset per <a
+        <p>The dataset to download should only be used for scientific or research purposes. Any
+            other use is explicitly prohibited. The datasets must not be redistributed or shared in part or full with any third party per <a
                     href="https://developer.twitter.com/en/developer-terms/policy">Twitter
-                Developer Policy</a>.</p>
+                Developer Policy</a>. Redirect
+                        interested parties to this website.
+        </p>
 
         <p> All the tweets are instantly crawled from Twitter. Organizers are aware some tweets could not be available
             when
