--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
             <b>[09/01]</b> Paper submission due date is extended to 9/2 PM (AoE). <br>
 <!--            <b>[08/28]</b> <s>No deadline extension - paper submission due date is still 9/1 (AoE).</s> <br>-->
 <!--            <b>[08/19]</b> Paper submission portal is open! See "Call for Papers" section. <br>-->
-            <b>[08/02]</b> Call for system description papers! See "Call for Papers" section. <br>
+<!--            <b>[08/02]</b> Call for system description papers! See "Call for Papers" section. <br>-->
             <b>[08/01]</b> Shared task leaderboard is out! <br>
-            <b>[07/19]</b> The submission (predicted results) deadline is extended to 07/26 (AoE). <br>
-            <b>[07/17]</b> The task submission (predicted results) portal is open <a href="https://docs.google.com/forms/d/e/1FAIpQLScT-JU8FHu1Eoa1Eq1XzCfg9HBvFdoutxXL5lMTI6NnKTt6yg/viewform">here</a>.<br>
+            <b>[07/19]</b> Submission (predicted results) deadline is extended to 07/26 (AoE). <br>
+            <b>[07/17]</b> Task submission (predicted results) portal is open <a href="https://docs.google.com/forms/d/e/1FAIpQLScT-JU8FHu1Eoa1Eq1XzCfg9HBvFdoutxXL5lMTI6NnKTt6yg/viewform">here</a>.<br>
 <!--            <b>[07/12]</b> The submission portal and evaluation script will be out by 7/16 as we received a large number of registrations that need us to refine the submission procedure. Thanks for your patience! <br>-->
-            <b>[07/08]</b> The test data is out <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> here</a>.<br>
+            <b>[07/08]</b> Test data is out <a href="https://github.com/ImageArg/ImageArg-Shared-Task"> here</a>.<br>
 <!--            Evaluation script will be out soon.<br>-->
 <!--            <b>[07/05]</b> Registration will be closed on 07/07 (AoE).<br>-->
             <b>[07/03]</b> Update data-downloading scripts. Please pull the
@@ -797,7 +797,7 @@ topic by the submission deadline so only partial results are evaluated.
         <ul>
 
             <!--                <ul>-->
-            <li><a href="https://people.cs.pitt.edu/~zhexiong/">Zheixong Liu</a>, Ph.D. Student of Computer
+            <li><a href="https://people.cs.pitt.edu/~zhexiong/">Zhexiong Liu</a>, Ph.D. Student of Computer
                 Science
             </li>
             <li><a href="https://engsalem.github.io/">Mohamed Elaraby</a>, Ph.D. Student of Computer Science
