--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <h1><a href="https://imagearg.github.io/">ImageArg-Shared-Task-2023</a></h1>
 
 
-        <p>Co-located with <a href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a></a> at <a
+        <p>Co-located with <a href="https://argmining-org.github.io/2023/">The 10th ArgMining Workshop</a> at <a
                 href="https://2023.emnlp.org/">EMNLP 2023</a> in Singapore. </p>
         <p class="view"><a href="https://github.com/ImageArg/ImageArg-Shared-Task">View Project Code on GitHub
             <small>ImageArg/ImageArg-Shared-Task</small></a></p>
@@ -162,7 +162,7 @@
         <p>There has been a recent surge of interest in developing methods and corpora to improve and evaluate
             persuasiveness in natural language applications. However, these efforts have mainly focused on the textual
             modality, neglecting the influence of other modalities. <a
-                    href="https://aclanthology.org/2022.argmining-1.1.pdf">Liu et al.</a> introduced a new multimodal
+                    href="https://aclanthology.org/2022.argmining-1.1/">Liu et al.</a> introduced a new multimodal
             dataset called <strong>ImageArg</strong>. This dataset includes persuasive tweets along with associated
             images, aiming to identify the image's stance towards the tweet and determine its persuasiveness score
             concerning a specific topic. The ImageArg dataset is a significant step towards advancing multimodal
@@ -196,7 +196,7 @@
 
         <p>ImageArg Shared Task is divided into two subtasks. Participants can choose Task A or Task B, or both. Please
             be aware that some tweet content may be upsetting or triggering. Please read details about AS and IP in the <a
-                href="https://aclanthology.org/2022.argmining-1.1.pdf">paper</a> if you
+                href="https://aclanthology.org/2022.argmining-1.1">paper</a> if you
             are interested.</p>
 
 
@@ -581,7 +581,21 @@ topic by the submission deadline so only partial results are evaluated.
         Note: Attempt denotes submission attempt number; Score denotes F1-score. The best submission attempt from each team is labeled with a star (&starf;) and will be used for final ranking.
         <br><br>
         <hr>
-        <h2 id="scripts to download the data"> 2. Dataset and Shared Task Submission</h2>
+        <h2 id="paper accepted"> 2. Accepted Papers</h2>
+        The following system description papers submitted by the shared task participants have been peer-reviewed and accepted to the 10th ArgMining workshop, co-located at EMNLP 2023. The full proceedings can be found <a href="https://aclanthology.org/2023.argmining-1.0/" >here</a>.
+        </p>
+        <ul>
+            <li>A General Framework for Multimodal Argument Persuasiveness Classification of Tweets. Mohammad Soltani and Julia Romberg</li>
+            <li>IUST at ImageArg: The First Shared Task in Multimodal Argument Mining. Melika Nobakhtian, Ghazal Zamaninejad, Erfan Moosavi Monazzah and Sauleh Eetemadi</li>
+            <li>TILFA: A Unified Framework for Text, Image, and Layout Fusion in Argument Mining. Qing Zong, Zhaowei Wang, Baixuan Xu, Tianshi Zheng, Haochen Shi, Weiqi Wang, Yangqiu Song, Ginny Wong and Simon See</li>
+            <li>Webis @ ImageArg 2023: Embedding-based Stance and Persuasiveness Classification. Islam Torky, Simon Ruth, Shashi Sharma, Mohamed Salama, Krishna Chaitanya, Tim Gollub, Johannes Kiesel and Benno Stein</li>
+            <li>GC-Hunter at ImageArg Shared Task: Multi-Modal Stance and Persuasiveness Learning. Mohammad Shokri and Sarah Ita Levitan</li>
+            <li>Argumentative Stance Prediction: An Exploratory Study on Multimodality and Few-Shot Learning. Arushi Sharma, Abhibha Gupta and Maneesh Bilalpur</li>
+            <li>SPLIT: Stance and Persuasion Prediction with Multi-modal on Image and Textual Information. Jing Zhang, Shaojun Yu, Xuan Li, Jia Geng, Zhiyuan Zheng and Joyce Ho</li>
+            <li>Semantists at ImageArg-2023: Exploring Cross-modal Contrastive and Ensemble Models for Multimodal Stance and Persuasiveness Classification. Kanagasabai Rajaraman, Hariram Veeramani, Saravanan Rajamanickam, Adam Maciej Westerski and Jung-Jae Kim</li>
+        </ul>
+        <hr>
+        <h2 id="scripts to download the data"> 3. Dataset and Shared Task Submission</h2>
         <p>The dataset to download should only be used for scientific or research purposes. Any
             other use is explicitly prohibited. The datasets must not be redistributed or shared in part or full with any third party per <a
                     href="https://developer.twitter.com/en/developer-terms/policy">Twitter
@@ -624,7 +638,7 @@ topic by the submission deadline so only partial results are evaluated.
 
         <hr>
 
-        <h2 id="system-description-paper-submission">3. Call for Papers (System Description Papers)</h2>
+        <h2 id="system-description-paper-submission">4. Call for Papers (System Description Papers)</h2>
 
         <p>
             The ImageArg Shared Task invites the submission of system description papers from all the teams
@@ -724,7 +738,7 @@ topic by the submission deadline so only partial results are evaluated.
 
 
         <hr>
-        <h2 id="timeline">4. Timeline</h2>
+        <h2 id="timeline">5. Timeline</h2>
         <!--        The timeline for shared task and system description paper submissions.-->
         <ul>
             <li>05/15/23: Training and Dev scripts (data) released for both subtasks</li>
@@ -737,7 +751,7 @@ topic by the submission deadline so only partial results are evaluated.
             <li>12/10/23: Workshop dates</li>
         </ul>
         <hr>
-        <h2 id="terms-and-conditions">5. Terms and Conditions</h2>
+        <h2 id="terms-and-conditions">6. Terms and Conditions</h2>
 
         <p>By participating in this task you agree to these terms and conditions. If, however, one or more of these
             conditions is a concern for you, email us, and we will consider if an exception can be made.</p>
@@ -791,7 +805,7 @@ topic by the submission deadline so only partial results are evaluated.
         </ul>
 
         <hr>
-        <h2 id="task-organizers">6. Organizing Committee</h2>
+        <h2 id="task-organizers">7. Organizing Committee</h2>
 
 
         <ul>
@@ -812,7 +826,7 @@ topic by the submission deadline so only partial results are evaluated.
 
 
         <hr>
-        <h2 id="program-committee">7. Program Committee</h2>
+        <h2 id="program-committee">8. Program Committee</h2>
 
         <ul>
             <li>Johannes Kiesel, Bauhaus-Universität Weimar</li>
