--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ topic by the submission deadline so only partial results are evaluated.
         <br><br>
         <hr>
         <h2 id="paper accepted"> 2. Accepted Papers</h2>
-        The following system description papers submitted by the shared task participants have been peer-reviewed and accepted to the 10th ArgMining workshop, co-located at EMNLP 2023. The full proceedings can be found <a href="https://aclanthology.org/2023.argmining-1.0/" >here</a>.
+        The following system description papers submitted by the shared task participants have been peer-reviewed and accepted to the 10th ArgMining workshop, co-located at EMNLP 2023. The full proceedings are <a href="https://aclanthology.org/volumes/2023.argmining-1/" >here</a>.
         </p>
         <ul>
             <li>A General Framework for Multimodal Argument Persuasiveness Classification of Tweets. Mohammad Soltani and Julia Romberg</li>
